travis and coveralls

--- a/README.hbs
+++ b/README.hbs
@@ -1,5 +1,5 @@
-Text file import
-=======
+# Text file import
+
 
 A small library use to import text data (ascii) from disk or over ftp in a directory with filter functionality
 
