--- a/README.hbs
+++ b/README.hbs
@@ -1,3 +1,6 @@
+[![Build Status](https://travis-ci.org/mickelindahl/text_file_import.svg?branch=master)](https://travis-ci.org/mickelindahl/text_file_import)
+[![Coverage Status](https://coveralls.io/repos/github/mickelindahl/text_file_import/badge.svg?branch=master)](https://coveralls.io/github/mickelindahl/text_file_import?branch=master)
+
 # Text file import
 
 
